Fix bug UI scrollbar popup, add eye for changePass Page

--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -211,3 +211,8 @@ input[type=password]::-ms-reveal,
 input[type=password]::-ms-clear {
 	display: none;
 }
+
+body {
+	overflow-x: hidden;
+}
+  
