--- a/src/public/styles/components/bank-account-popup.css
+++ b/src/public/styles/components/bank-account-popup.css
@@ -1,4 +1,5 @@
 .modal {
+    overflow-y: hidden;
     position: fixed;
     display: none;
     z-index: 100;
