--- a/src/public/styles/pages/booking/detail.css
+++ b/src/public/styles/pages/booking/detail.css
@@ -130,6 +130,10 @@ h3 {
     box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
 }
 
+.cancel-booking {
+    background-color: var(--red-2) !important;
+}
+
 .detail__contact button {
     width: max-content;
     border: none;
